# cat2

./: README.md  cat2.opam  dune-project
lib/: Constructed.ml  Type.ml  dune
lib/Base/: Box.ml  Coproduct.ml  Maybe.ml  Product.ml
lib/Class/: Applicative.ml  Arrow.ml  Arrow_with_choice.ml  Bifunctor.ml  Category.ml  Equalizable.ml  Functor.ml  Liftable.ml  Monad.ml
lib/Complete/: Box.ml  Coproduct.ml  Maybe.ml  Product.ml
lib/Factory/: Coproduct.ml  Product.ml
lib/Instance/: Box.ml  Coproduct.ml  Maybe.ml  Product.ml
lib/Isomorphism/: Maybe.ml
